# troop

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.tmp_home/.troop/: config.yaml
old/: cli.py  config.py  mcptools.py  registry.py  utils.py
scripts/: pydanticai.py  release.py
src/troop/: __init__.py  app.py  cli.py  config.py  core.py  display.py  mcptools.py  runner.py  types.py  util.py  utils.py
src/troop/clients/: openai.py
src/troop/commands/: __init__.py  agent.py  agents.py  keys.py  model.py  models.py  servers.py
tests/: mock_client.py  test_agent.py  test_context.py  test_core.py  test_core_extended.py  test_streaming.py  test_tools.py
tests/integration/: test_agent_execution.py  test_agent_execution_simple.py
tests/unit/: test_agent_command.py
