[project]
name = "troop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul-Louis Pröve", email = "mail@plpp.de" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.3.0",
    "pydantic-ai-slim[openai]>=0.0.37",
    "typer>=0.15.2",
]

[project.scripts]
troop = "troop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
